--- a/layouts/en.pug
+++ b/layouts/en.pug
@@ -23,7 +23,7 @@ html(lang="en")
        include ./partials/header.pug
 
       block main
-       include ./partials/apie-mus.pug
+       include ./partials/main.pug
        
       block footer
        include ./partials/footer.pug
