--- a/layouts/partials/main.pug
+++ b/layouts/partials/main.pug
@@ -2,3 +2,16 @@ section
  .r
   .c0
    p main page content
+   h1 Contents turinys
+   p!= contents
+   p _____
+   p #{kaina}
+   p #{body}
+   p !{body}
+   p!= body
+   p #{photo}
+   h1 Apie
+   p !{apie}
+   p #{apie}
+
+   
